--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: env HOME=/etc/.pm2 pm2 start ./ecosystem.config.js --env staging
+    - run: pm2 start ./ecosystem.config.js --env staging
